update home page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,32 @@
     <title>Home</title>
 </head>
 <body>
-<nav> <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-</ul></nav>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
 
-    <h1>Hello World!</h1>
-<p>Get basic body setup</p>
+<h1>Canine Companions</h1>
+<p> Canine Companions, LLC is a small, independent business inspired by loyalty, trust, and companionship.
+    We focus on delivering thoughtful, reliable services with a personal touch.</p>
+<p> Inspired by Henrick and Raeya: two loyal companions whose personalities shaped
+    our brand, logo, and our mission to create meaningful experiences while
+    maintaining high standards of quality pet care.</p>
+
+<h2>Our Services</h2>
+<ul>
+    <li>Custom services tailored to your needs</li>
+    <li>Reliable and consistent service</li>
+    <li>In home dog sitting</li>
+    <li>Professional dog walking</li>
+</ul>
+<footer class="footer">
+    <p>
+        © 2026 Canine Companions LLC. This company website is a fictional project created for educational purposes only.
+    </p>
+</footer>
 </body>
 </html>
