update styles and clean up text

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="src/style.css">
+    <link rel="icon" href="src/images/Favicon_ChatGPT.png" type="image/x-icon">
     <title>Home</title>
 </head>
 <body>
+<footer class="footer1">
+    <p>
+        © 2026 Canine Companions LLC. This site was created as part of a web development course and does not represent
+        nor is affiliated with a real company. Open-sourced on <a
+            href="https://github.com/rgwhite210/vanilla-business-page-cs104">Github</a> | Coded by <a
+            href="https://github.com/rgwhite210">Rachel White</a> 👩‍
+    <p>
+</footer>
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -15,23 +25,37 @@
 </nav>
 
 <h1>Canine Companions</h1>
-<p> Canine Companions, LLC is a small, independent business inspired by loyalty, trust, and companionship.
-    We focus on delivering thoughtful, reliable services with a personal touch.</p>
-<p> Inspired by Henrick and Raeya: two loyal companions whose personalities shaped
-    our brand, logo, and our mission to create meaningful experiences while
-    maintaining high standards of quality pet care.</p>
+
+<img class="logo" src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs" width="400"
+     height="400">
+
+
+<h2>Our Inspiration</h2>
+<p> Canine Companions, LLC is a small, independent business inspired by loyalty, trust, and companionship. We focus on
+    delivering thoughtful, reliable services with a personal touch. Inspired by Henrick and Raeya: two loyal companions
+    whose personalities shaped our brand, logo, and our mission to
+    create meaningful experiences while maintaining high standards of quality pet care.</p>
+
+<div class="pets-container">
+    <img class="pets" src="src/images/IMG_1219.jpg" alt="picture of Rachel's dog" width="300" height="400">
+    <img class="pets" src="src/images/IMG_2286.jpg" alt="picture of Rachel's dog" width="300" height="400">
+</div>
 
 <h2>Our Services</h2>
 <ul>
-    <li>Custom services tailored to your needs</li>
-    <li>Reliable and consistent service</li>
-    <li>In home dog sitting</li>
-    <li>Professional dog walking</li>
+    <li>Custom services tailored to your needs ✔️</li>
+    <li>Reliable and consistent service ✔️</li>
+    <li>In home dog sitting ✔️</li>
+    <li>Professional dog walking ✔️</li>
 </ul>
-<footer class="footer">
+
+<footer class="footer2">
     <p>
-        © 2026 Canine Companions LLC. This company website is a fictional project created for educational purposes only.
-    </p>
+        © 2026 Canine Companions LLC. This site was created as part of a web development course and does not represent
+        nor is affiliated with a real company. Open-sourced on <a
+            href="https://github.com/rgwhite210/vanilla-business-page-cs104">Github</a> | Coded by <a
+            href="https://github.com/rgwhite210">Rachel White</a> 👩‍
+    <p>
 </footer>
 </body>
 </html>
