--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="src/pages/services.html">Services</a></li>
+        <li><a href="src/pages/contact.html">Contact</a></li>
     </ul>
 </nav>
 
