update class names

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>Home</title>
 </head>
 <body>
-<footer class="footer1">
+<header class="header">
     <p>
         © 2026 Canine Companions LLC. This site was created as part of a web development course and does not represent
         nor is affiliated with a real company. Open-sourced on <a
-            href="https://github.com/rgwhite210/vanilla-business-page-cs104">Github</a> | Coded by <a
-            href="https://github.com/rgwhite210">Rachel White</a> 👩‍
+            href="https://github.com/rgwhite210/vanilla-business-page-cs104" target="_blank">Github</a> | Coded by <a
+            href="https://github.com/rgwhite210" target="_blank">Rachel White</a> 👩‍
     </p>
-</footer>
+</header>
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -28,7 +28,6 @@
 
 <img class="logo" src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs" width="400"
      height="400">
-
 
 <h2>Our Inspiration</h2>
 <p> Canine Companions, LLC is a small, independent business inspired by loyalty, trust, and companionship. We focus on
@@ -48,13 +47,12 @@
     <li>In home dog sitting ✔️</li>
     <li>Professional dog walking ✔️</li>
 </ul>
-
-<footer class="footer2">
+<footer class="footer">
     <p>
         © 2026 Canine Companions LLC. This site was created as part of a web development course and does not represent
         nor is affiliated with a real company. Open-sourced on <a
-            href="https://github.com/rgwhite210/vanilla-business-page-cs104">Github</a> | Coded by <a
-            href="https://github.com/rgwhite210">Rachel White</a> 👩‍
+            href="https://github.com/rgwhite210/vanilla-business-page-cs104" target="_blank">Github</a> | Coded by <a
+            href="https://github.com/rgwhite210" target="_blank">Rachel White</a> 👩‍
     </p>
 </footer>
 </body>
