create responsive services page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </ul>
 </nav>
 
-<h1>Canine Companions</h1>
+<h1>Welcome to Canine Companions!</h1>
 
 <h2>Pet Care <em>Matters</em></h2>
 <p class="main">Canine Companions, LLC is a small, independent business built on loyalty, trust, and companionship. We
@@ -68,14 +68,15 @@
     <p class="main">
         We understand that your dog is part of your family. That’s why we focus on
         consistency, safety, and very personalized care. Our goal is to build long-term
-        relationships with both pets and their owners. <strong>Contact us today to learn more or get started.</strong>
+        relationships with both pets and their owners. Contact us today to learn more or get started!
     </p>
 </div>
 <div class="button-container-2">
     <a href="src/pages/contact.html" class="button">Contact Us</a>
 </div>
+
 <div class="logo-bottom">
-    <img src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs" width="400" height="400">
+    <img src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs">
 </div>
 <footer class="footer">
     <p class="footer-text">
