--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../../style.css">
+    <link rel="icon" href="../images/Favicon_ChatGPT.png" type="image/x-icon">
     <title>Contact Us</title>
 </head>
 <body>
-<h1>Contact Us page coming soon!</h1>
+<header class="header">
+    <p class="header-text">
+        © 2026 Canine Companions, LLC. This site was created as part of a web development course and does not represent
+        nor is affiliated with a real company. Open-sourced on <a
+            href="https://github.com/rgwhite210/vanilla-business-page-cs104" target="_blank">Github</a> | Coded by <a
+            href="https://github.com/rgwhite210" target="_blank">Rachel White</a> 👩‍
+    </p>
+</header>
+<nav class="navbar">
+    <div class="logo">
+        <img src="../images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs">
+    </div>
+    <ul class="nav-links">
+        <li><a href="../../index.html">Home</a></li>
+        <li><a href="../pages/services.html">Services</a></li>
+        <li><a href="../pages/contact.html">Contact</a></li>
+    </ul>
+</nav>
+<h1>Contact Us</h1>
 </body>
 </html>
