fix accessibility issues

--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -26,66 +26,68 @@
         <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
 </nav>
-<h1>Our Services</h1>
-<p class="main">Whether you’re away for the day or need ongoing support, we provide attentive pet care you can
-    trust. Here are some of the services we offer though we can tailor to your needs.</p>
-<div class="services-menu">
-    <div class=menu-container>
-        <div class="menu-card">
-            <h4 class="menu-title"><b>Dog Walking</b></h4>
-            <ul class="menu-body">
-                <li>Ideal for busy workdays</li>
-                <li>Tailored pace and route</li>
-                <li>One-on-one attention</li>
-            </ul>
+<main>
+    <h1>Our Services</h1>
+    <p class="main">Whether you’re away for the day or need ongoing support, we provide attentive pet care you can
+        trust. Here are some of the services we offer though we can tailor to your needs.</p>
+    <div class="services-menu">
+        <div class=menu-container>
+            <div class="menu-card">
+                <p class="menu-title"><b>Dog Walking</b></p>
+                <ul class="menu-body">
+                    <li>Ideal for busy workdays</li>
+                    <li>Tailored pace and route</li>
+                    <li>One-on-one attention</li>
+                </ul>
+            </div>
+        </div>
+        <div class=menu-container>
+            <div class="menu-card">
+                <p class="menu-title"><b>Pet Sitting</b></p>
+                <ul class="menu-body">
+                    <li>In-home care options</li>
+                    <li>Overnight care vs boarding</li>
+                    <li>Play and comfort</li>
+                </ul>
+            </div>
+        </div>
+        <div class=menu-container>
+            <div class="menu-card">
+                <p class="menu-title"><b>Dietary Support</b></p>
+                <ul class="menu-body">
+                    <li>Special diets</li>
+                    <li>Medication reminders</li>
+                    <li>Frequent updates</li>
+                </ul>
+            </div>
+        </div>
+        <div class=menu-container>
+            <div class="menu-card">
+                <p class="menu-title"><b>Social Interaction</b></p>
+                <ul class="menu-body">
+                    <li>Mental stimulation</li>
+                    <li>Companionship care</li>
+                    <li>Playtime based on personality</li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class=menu-container>
-        <div class="menu-card">
-            <h4 class="menu-title"><b>Pet Sitting</b></h4>
-            <ul class="menu-body">
-                <li>In-home care options</li>
-                <li>Overnight care vs boarding</li>
-                <li>Play and comfort</li>
-            </ul>
+    <div class="our-process">
+        <h1>Our Process</h1>
+        <p class="main">We can get started in three simple steps.</p>
+        <ul class="services">
+            <li class="services">Initial contact and consultation 📞️</li>
+            <li class="services">Learn your dog’s routine and needs 🐶️</li>
+            <li class="services">Schedule services that fit your lifestyle 📅️</li>
+        </ul>
+    </div>
+    <div class="our-process">
+        <h1>Ready to Get Started?</h1>
+        <div class="button-container-2">
+            <a href="contact.html" class="button">Contact Us</a>
         </div>
     </div>
-    <div class=menu-container>
-        <div class="menu-card">
-            <h4 class="menu-title"><b>Dietary Support</b></h4>
-            <ul class="menu-body">
-                <li>Special diets</li>
-                <li>Medication reminders</li>
-                <li>Frequent updates</li>
-            </ul>
-        </div>
-    </div>
-    <div class=menu-container>
-        <div class="menu-card">
-            <h4 class="menu-title"><b>Social Interaction</b></h4>
-            <ul class="menu-body">
-                <li>Mental stimulation</li>
-                <li>Companionship care</li>
-                <li>Playtime based on personality</li>
-            </ul>
-        </div>
-    </div>
-</div>
-<div class="our-process">
-    <h1>Our Process</h1>
-    <p class="main">We can get started in three simple steps.</p>
-    <ul class="services">
-        <li class="services">Initial contact and consultation 📞️</li>
-        <li class="services">Learn your dog’s routine and needs 🐶️</li>
-        <li class="services">Schedule services that fit your lifestyle 📅️</li>
-    </ul>
-</div>
-<div class="our-process">
-    <h1>Ready to Get Started?</h1>
-    <div class="button-container-2">
-        <a href="contact.html" class="button">Contact Us</a>
-    </div>
-</div>
+</main>
 <div class="logo-bottom">
     <img src="../images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs">
 </div>
