--- a/index.html
+++ b/index.html
@@ -27,54 +27,63 @@
     </ul>
 </nav>
 
-<h1>Welcome to Canine Companions!</h1>
+<main>
+    <h1>Welcome to Canine Companions!</h1>
 
-<h2>Pet Care <em>Matters</em></h2>
-<p class="main">Canine Companions, LLC is a small, independent business built on loyalty, trust, and companionship. We
-    focus on providing thoughtful, reliable dog care with a personal touch, treating every dog in our care like
-    family.</p>
+    <h2>Pet Care <em>Matters</em></h2>
+    <p class="main">Canine Companions, LLC is a small, independent business built on loyalty, trust, and companionship.
+        We
+        focus on providing thoughtful, reliable dog care with a personal touch, treating every dog in our care like
+        family.</p>
 
-<h2>Our Inspiration</h2>
-<p class="main">Canine Companions was inspired by Henrick and Raeya, our two very special dogs, who represent everything
-    we love about canine companionship.</p>
-<p class="main">Raeya is a true social butterfly. Friendly, outgoing, and always ready to make a new friend, she brings
-    warmth and joy wherever she goes. Her playful spirit and gentle nature remind us how important connection, trust,
-    and positive interactions are in a dog’s daily life.</p>
-<p class="main">Henrick, on the other hand, is sweet, thoughtful, and a little shy. He’s a handsome boy with a calm
-    presence, showing us that every dog has their own pace and personality. Henrick has taught us the importance of
-    patience, understanding, and creating a safe, comfortable environment where dogs can feel secure and cared for.</p>
-<p class="main">Together, Raeya and Henrick shaped our brand, logo, and mission. They inspire us to provide thoughtful,
-    compassionate, and personalized care for dogs of all breeds and sizes. Whether your dog is outgoing like Raeya or
-    more reserved like Henrick, we’re committed to giving them the attention, respect, and care they deserve...so you
-    can have complete peace of mind.</p>
+    <h2>Our Inspiration</h2>
+    <p class="main">Canine Companions was inspired by Henrick and Raeya, our two very special dogs, who represent
+        everything
+        we love about canine companionship.</p>
+    <p class="main">Raeya is a true social butterfly. Friendly, outgoing, and always ready to make a new friend, she
+        brings
+        warmth and joy wherever she goes. Her playful spirit and gentle nature remind us how important connection,
+        trust,
+        and positive interactions are in a dog’s daily life.</p>
+    <p class="main">Henrick, on the other hand, is sweet, thoughtful, and a little shy. He’s a handsome boy with a calm
+        presence, showing us that every dog has their own pace and personality. Henrick has taught us the importance of
+        patience, understanding, and creating a safe, comfortable environment where dogs can feel secure and cared
+        for.</p>
+    <p class="main">Together, Raeya and Henrick shaped our brand, logo, and mission. They inspire us to provide
+        thoughtful,
+        compassionate, and personalized care for dogs of all breeds and sizes. Whether your dog is outgoing like Raeya
+        or
+        more reserved like Henrick, we’re committed to giving them the attention, respect, and care they deserve...so
+        you
+        can have complete peace of mind.</p>
 
-<div class="pets-container">
-    <img class="pets" src="src/images/IMG_1219.jpg" alt="picture of Rachel's dog" width="300" height="400">
-    <img class="pets" src="src/images/IMG_2286.jpg" alt="picture of Rachel's dog" width="300" height="400">
-</div>
+    <div class="pets-container">
+        <img class="pets" src="src/images/IMG_1219.jpg" alt="picture of Rachel's dog" width="300" height="400">
+        <img class="pets" src="src/images/IMG_2286.jpg" alt="picture of Rachel's dog" width="300" height="400">
+    </div>
 
-<h2>Our Services</h2>
-<ul class="services">
-    <li class="services">Daily Dog Walking ✔️</li>
-    <li class="services">Pet Sitting & Overnight Care ✔️</li>
-    <li class="services">Feeding & Medication Assistance ✔️</li>
-    <li class="services">Playtime & Social Interaction ✔️</li>
-</ul>
-<div class="button-container-1">
-    <a href="src/pages/services.html" class="button">View All Services</a>
-</div>
-<div class="why-us">
-    <h2>Why Choose Canine Companions?</h2>
-    <p class="main">
-        We understand that your dog is part of your family. That’s why we focus on
-        consistency, safety, and very personalized care. Our goal is to build long-term
-        relationships with both pets and their owners. Contact us today to learn more or get started!
-    </p>
-</div>
-<div class="button-container-2">
-    <a href="src/pages/contact.html" class="button">Contact Us</a>
-</div>
-
+    <h2>Our Services</h2>
+    <ul class="services">
+        <li class="services">Daily Dog Walking ✔️</li>
+        <li class="services">Pet Sitting & Overnight Care ✔️</li>
+        <li class="services">Feeding & Medication Assistance ✔️</li>
+        <li class="services">Playtime & Social Interaction ✔️</li>
+    </ul>
+    <div class="button-container-1">
+        <a href="src/pages/services.html" class="button">View All Services</a>
+    </div>
+    <div class="why-us">
+        <h2>Why Choose Canine Companions?</h2>
+        <p class="main">
+            We understand that your dog is part of your family. That’s why we focus on
+            consistency, safety, and very personalized care. Our goal is to build long-term
+            relationships with both pets and their owners. Contact us today to learn more or get started!
+        </p>
+    </div>
+    <div class="button-container-2">
+        <a href="src/pages/contact.html" class="button">Contact Us</a>
+    </div>
+</main>
 <div class="logo-bottom">
     <img src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs">
 </div>
