add collapsing faq feature

--- a/index.html
+++ b/index.html
@@ -83,6 +83,61 @@
     <div class="button-container-2">
         <a href="src/pages/contact.html" class="button">Contact Us</a>
     </div>
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+
+        <div class="faq-card">
+            <div class="faq-header">
+                <p class="faq-question">What areas do you serve?</p>
+                <span class="faq-toggle">+</span>
+            </div>
+            <p class="faq-answer">
+                We currently provide services within our local community and nearby neighborhoods.
+            </p>
+        </div>
+
+        <div class="faq-card">
+            <div class="faq-header">
+                <p class="faq-question">Do you offer overnight pet sitting?</p>
+                <span class="faq-toggle">+</span>
+            </div>
+            <p class="faq-answer">
+                Yes! We offer both overnight care and extended in-home pet sitting based on your needs.
+            </p>
+        </div>
+
+        <div class="faq-card">
+            <div class="faq-header">
+                <p class="faq-question">What types of dogs do you work with?</p>
+                <span class="faq-toggle">+</span>
+            </div>
+            <p class="faq-answer">
+                We care for dogs of all breeds, sizes, and temperaments. Every dog is unique, and we tailor our approach
+                to fit their individual needs and personality.
+            </p>
+        </div>
+        <div class="faq-card">
+            <div class="faq-header">
+                <p class="faq-question">Can you accommodate special routines or requests?</p>
+                <span class="faq-toggle">+</span>
+            </div>
+            <p class="faq-answer">
+                Absolutely. We’re happy to follow specific feeding schedules, walking routines, or behavioral guidelines
+                to keep your dog’s day consistent.
+            </p>
+        </div>
+        <div class="faq-card">
+            <div class="faq-header">
+                <p class="faq-question">Are you insured or experienced with pet care?</p>
+                <span class="faq-toggle">+</span>
+            </div>
+            <p class="faq-answer">
+                Yes. We take safety and responsibility seriously and have experience caring for dogs with a variety of
+                needs and personalities.
+            </p>
+        </div>
+    </section>
+
 </main>
 <div class="logo-bottom">
     <img src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs">
@@ -96,4 +151,5 @@
     </p>
 </footer>
 </body>
+<script src="src/features/faq.js"></script>
 </html>
