--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </header>
 <nav class="navbar">
     <div class="logo">
-        <img src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs">
+        <a href="index.html">
+            <img src="src/images/Logo_ChatGPT.png" alt="ChatGPT generated logo image of Rachel's dogs">
+        </a>
     </div>
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
