--- a/index.html
+++ b/index.html
@@ -42,15 +42,6 @@
     <p class="main">Canine Companions was inspired by Henrick and Raeya, our two very special dogs, who represent
         everything
         we love about canine companionship.</p>
-    <p class="main">Raeya is a true social butterfly. Friendly, outgoing, and always ready to make a new friend, she
-        brings
-        warmth and joy wherever she goes. Her playful spirit and gentle nature remind us how important connection,
-        trust,
-        and positive interactions are in a dog’s daily life.</p>
-    <p class="main">Henrick, on the other hand, is sweet, thoughtful, and a little shy. He’s a handsome boy with a calm
-        presence, showing us that every dog has their own pace and personality. Henrick has taught us the importance of
-        patience, understanding, and creating a safe, comfortable environment where dogs can feel secure and cared
-        for.</p>
     <p class="main">Together, Raeya and Henrick shaped our brand, logo, and mission. They inspire us to provide
         thoughtful,
         compassionate, and personalized care for dogs of all breeds and sizes. Whether your dog is outgoing like Raeya
@@ -59,10 +50,37 @@
         you
         can have complete peace of mind.</p>
 
-    <div class="pets-container">
-        <img class="pets" src="src/images/IMG_1219.jpg" alt="picture of Rachel's dog" width="300" height="400">
-        <img class="pets" src="src/images/IMG_2286.jpg" alt="picture of Rachel's dog" width="300" height="400">
-    </div>
+    <section class="pets-section">
+        <h2>Meet Our Dogs</h2>
+        <div class="pets-container">
+            <div class="pet-card">
+                <img
+                        src="src/images/IMG_1219.jpg"
+                        alt="Henrick, a calm and gentle dog"
+                        class="pet-image"
+                >
+                <p class="pet-description">
+                    Henrick is sweet, thoughtful, and a little shy. He has a calm presence and shows us the importance
+                    of
+                    patience, understanding, and creating a safe, comfortable environment.
+                </p>
+            </div>
+
+            <div class="pet-card">
+                <img
+                        src="src/images/IMG_2286.jpg"
+                        alt="Raeya, a friendly and playful dog"
+                        class="pet-image"
+                >
+                <p class="pet-description">
+                    Raeya is a true social butterfly. Friendly, outgoing, and always ready to make a new friend, she
+                    brings
+                    warmth and joy wherever she goes.
+                </p>
+            </div>
+        </div>
+    </section>
+
 
     <h2>Our Services</h2>
     <ul class="services">
@@ -154,4 +172,5 @@
 </footer>
 </body>
 <script src="src/features/faq.js"></script>
+<script src="src/features/pets.js"></script>
 </html>
